feature: add profile service support
