# internal/transport/http/handler/v1/profile/handler.go
@@ -4,14 +4,20 @@ import (
 	"github.com/mephistolie/chefbook-backend-api-gateway/internal/service"
 )
 
+const (
+	ParamProfileId = "profile_id"
+)
+
 type Handler struct {
-	auth *service.Auth
-	user *service.User
+	auth    *service.Auth
+	user    *service.User
+	profile *service.Profile
 }
 
-func NewHandler(auth *service.Auth, user *service.User) *Handler {
+func NewHandler(auth *service.Auth, user *service.User, profile *service.Profile) *Handler {
 	return &Handler{
-		auth: auth,
-		user: user,
+		auth:    auth,
+		user:    user,
+		profile: profile,
 	}
 }
